@@ -215,21 +215,24 @@
   (let* ((olen (string-length s))
          (len (+ 2 olen))
          (cuts (let loop ((stop olen) (acc (list olen)))
+                 (define (with x)
+                   (acons x (car acc) (cdr acc)))
                  (cond ((string-rindex s #\' 0 stop)
                         => (lambda (hit)
                              (set! len (1+ len))
-                             (loop hit (cons hit (cons hit acc)))))
-                       (else (cons 0 acc)))))
+                             (loop hit (cons hit (with hit)))))
+                       (else (with 0)))))
          (rv (make-string len)))
     (string-set! rv 0 #\')
     (string-set! rv (1- len) #\')
     (let loop ((put 1) (ls cuts))
       (if (null? ls)
           (sql-pre rv)                  ; rv
-          (let* ((one (car ls))
-                 (two (cadr ls))
+          (let* ((pair (car ls))
+                 (one (car pair))
+                 (two (cdr pair))
                  (end (+ put (- two one)))
-                 (tail (cddr ls)))
+                 (tail (cdr ls)))
             (substring-move! s one two rv put)
             (or (null? tail)
                 (string-set! rv end #\'))
