@@ -1,5 +1,12 @@
 2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[qcons int] Cons less in ‘sql-quote’.
+
+	* postgres-qcons.scm (sql-quote): Accumulate a list of
+	range-pairs instead of a list of alternating range components.
+
+2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[pq slog] Specialize ‘DEFSMOB’ for Guile 1.8+.
 
 	* gi.h (DEFSMOB) [!GI_LEVEL_NOT_YET_1_8]: New macro.
